Fix wrong margin

--- a/src/app/main-layout/main-layout.component.css
+++ b/src/app/main-layout/main-layout.component.css
@@ -1,7 +1,6 @@
 .container {
   width: 100%;
   height: 100%;
-  margin: 10px;
 }
 
 .mat-mdc-raised-button.color-button {
@@ -17,7 +16,9 @@
 }
 
 .header-h3 {
+  padding: 10px;
   color: rgba(108, 180, 91, 255);
+  display: flex;
 }
 
 .title-icon {
